@@ -14,6 +14,8 @@ ENHANCEMENTS
 BUG FIXES
 
  * #254: bench.py script hadn't been ported to Python 3.
+ * #263: MultiprocessFTPServer leaks memory and file descriptors.  (patch by
+         Juan J. Martinez)
 
 
 Version: 1.2.0 - Date: 2013-04-22
